add project readme file, installation instruction and an improved storage json example